--- a/resume.html
+++ b/resume.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <style>
+        h1,h2{
+            text-align: justify;
+        }
+        body{
+            padding-left:350px;
+            padding-right: 350px;
+            font-family: 'Courier New', Courier, monospace;
+        }
+        .one{
+            height: 150px;
+            width: 150px;
+            border-radius: 50%;
+            float: right;
+        }
+    </style>
 </head>
 <body>
     <h1>Mahesh</h1>
-    <img src="" alt="">
+    <img class="one" src="./5D4_7333.jpg" alt="1">
     <h2>Summary</h2>
     <p>I am the person who wants to work efficiently and prove my self better for capable of every work</p>
     <hr>
@@ -21,8 +37,15 @@
     <h2>Work Experience</h2>
     <ul>
         <li><h3>No work Experience</h3></li>
-        <li><p>But there is somthing say that <i>I am ateending a course on Udemy</i> </p></li>
+        <li><p>But there is somthing say that <i>I am attending a full stack web development course</i> </p></li>
     </ul>
+    <h2>Professional Languages</h2>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JAVASCRIPT(Intermediate)</li>
+        <li>PYTHON</li>
+    </ol>
     <h2>Skills</h2>
     <ul>
         <li>smart working</li>
