--- a/fourth.html
+++ b/fourth.html
@@ -1,9 +1,27 @@
-<h1>top four fav ott sites</h1>
-<ol>
-    <li>
-        <a href="https://www.netflix.com/in/">netflix</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+        <style> 
+            
+            .max{
+                text-align: center;
+                
+            }
+        </style>
+</head>
+<body class="max">
+
+<h1 class="max">My four fav ott sites</h1>
+<ul class="max"> <li class="max">
+        <a href="https://www.netflix.com/in/"> <strong>Netflix</strong></a>
     </li>
-    <li><a href="https://www.amazon.in/">amezon</a></li>
-    <li><a href="#">hotstar</a></li>
-    <li><a href="#">aha</a></li>
-</ol>
+    <li class="max"><a href="https://www.amazon.in/"><strong>Amezon</strong></a></li>
+    <li class="max"><a href="https://www.hotstar.com/in"><strong>Hotstar</strong></a></li>
+    <li class="max"><a href="https://www.aha.video/"><strong>Aha</strong></a></li>
+
+</ul>
+</body>
+</html>
