--- a/second.html
+++ b/second.html
@@ -1,13 +1,14 @@
-<h1>my college</h1>
+<h1>My college</h1>
 <h2>Bharat institute of engineering and technology</h2>
 <h3>Electronics and Commounication Engineering</h3>
+<h4>Subjects</h4>
 <ul>
-    <li>ss</li>
-    <li>ds</li>
-    <li>ms</li>
-    <li>cs</li>
+    <li>Signals and systems</li>
+    <li>Digital signals</li>
+    <li>Mathamatics</li>
+    <li>Computer signals</li>
 </ul>
-<h3>feelings</h3>
+<h3>Feelings</h3>
 
 <ol>
     <li>sad</li>
