--- a/fifth.html
+++ b/fifth.html
@@ -1,6 +1,28 @@
-<h1>Tiger looking at you</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body{
+            text-align: center;
+            
+        }
+        img{
+            border-radius: 10%;
+
+        }
+    </style>
+</head>
+<body>
+    
+
+<h1>Look into the eyes.</h1>
 <img src="https://a-z-animals.com/media/tiger_laying_hero_background.jpg" height="200" width="300" >
-<h2>laying very comfortably</h2>
-<p>The tiger look's like a king</p>
+<h2>Look at this beautiful wolf.</h2>
+<p>Waiting for time to hunt the food.</p>
 <img src="https://images.unsplash.com/photo-1474511320723-9a56873867b5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80" height="200"
 width="300"alt="hell">
+</body>
+</html>
